--- a/OCRTest/OCRTest.WindowsPhone/MainPage.xaml
+++ b/OCRTest/OCRTest.WindowsPhone/MainPage.xaml
@@ -8,15 +8,17 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+    <Viewbox>
     <Grid>
         <Button x:Name="btnPhoto" Content="Take Photo" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="103,15,0,0" Click="btnPhoto_Click"/>
         <TextBox x:Name="txtText" HorizontalAlignment="Left" Margin="10,68,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="323" Width="313"/>
         <Grid Margin="346,25,0,0" Width="366" Height="366">
-            <Image x:Name="SelectedImage" HorizontalAlignment="Center" Height="366" VerticalAlignment="Center" Width="366" Margin="0"/>
+            <Image x:Name="SelectedImage" HorizontalAlignment="Center" Height="366" VerticalAlignment="Center" Width="366" Margin="0" Stretch="Uniform"/>
             <Canvas Name="MyCanvas" HorizontalAlignment="Center" Height="366" VerticalAlignment="Center" Width="366" Margin="0">
             </Canvas>
 
         </Grid>
 
     </Grid>
+    </Viewbox>
 </Page>
